--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
   "homepage": "https://github.com/robsonklima/node-todo-api#readme",
   "dependencies": {
     "body-parser": "^1.15.2",
+    "crypto-js": "^3.1.6",
     "express": "^4.14.0",
+    "jsonwebtoken": "^7.1.9",
     "lodash": "^4.15.0",
     "mongodb": "^2.2.5",
-    "mongoose": "^4.5.9"
+    "mongoose": "^4.5.9",
+    "validator": "^5.6.0"
   },
   "devDependencies": {
     "expect": "^1.20.2",
